src/qt/libqgraphicssceneevent.bf

using System;
using System.Interop;
namespace Qt;

[AllowDuplicates]
public enum QGraphicsSceneContextMenuEvent__Reason
{
	Mouse = 0,
	Keyboard = 1,
	Other = 2,
}
public class QGraphicsSceneEvent
{
	protected void* nativePtr;
	
	public this(int64 typeVal)
	{
		this.nativePtr = CQt.QGraphicsSceneEvent_new(typeVal);
	}
	
	public ~this()
	{
		CQt.QGraphicsSceneEvent_Delete(this.nativePtr);
	}
	
	public void* Widget()
	{
		return CQt.QGraphicsSceneEvent_Widget(this.nativePtr);
	}
	
	public void SetWidget(void* widget)
	{
		CQt.QGraphicsSceneEvent_SetWidget(this.nativePtr, widget);
	}
	
	public uint64 Timestamp()
	{
		return CQt.QGraphicsSceneEvent_Timestamp(this.nativePtr);
	}
	
	public void SetTimestamp(uint64 ts)
	{
		CQt.QGraphicsSceneEvent_SetTimestamp(this.nativePtr, ts);
	}
	
	public int64 Type()
	{
		return CQt.QEvent_Type(this.nativePtr);
	}
	
	public bool Spontaneous()
	{
		return CQt.QEvent_Spontaneous(this.nativePtr);
	}
	
	public virtual void SetAccepted(bool accepted)
	{
		CQt.QEvent_SetAccepted(this.nativePtr, accepted);
	}
	
	public bool IsAccepted()
	{
		return CQt.QEvent_IsAccepted(this.nativePtr);
	}
	
	public void Accept()
	{
		CQt.QEvent_Accept(this.nativePtr);
	}
	
	public void Ignore()
	{
		CQt.QEvent_Ignore(this.nativePtr);
	}
	
	public bool IsInputEvent()
	{
		return CQt.QEvent_IsInputEvent(this.nativePtr);
	}
	
	public bool IsPointerEvent()
	{
		return CQt.QEvent_IsPointerEvent(this.nativePtr);
	}
	
	public bool IsSinglePointEvent()
	{
		return CQt.QEvent_IsSinglePointEvent(this.nativePtr);
	}
	
	public static int32 RegisterEventType()
	{
		return CQt.QEvent_RegisterEventType();
	}
	
	public virtual void* Clone()
	{
		return CQt.QEvent_Clone(this.nativePtr);
	}
	
	public static int32 RegisterEventType1(int32 hint)
	{
		return CQt.QEvent_RegisterEventType1(hint);
	}
	
}
extension CQt
{
	[LinkName("QGraphicsSceneEvent_new")]
	public static extern void* QGraphicsSceneEvent_new(int64 typeVal);
	[LinkName("QGraphicsSceneEvent_Widget")]
	public static extern void* QGraphicsSceneEvent_Widget(void* c_this);
	[LinkName("QGraphicsSceneEvent_SetWidget")]
	public static extern void QGraphicsSceneEvent_SetWidget(void* c_this, void* widget);
	[LinkName("QGraphicsSceneEvent_Timestamp")]
	public static extern uint64 QGraphicsSceneEvent_Timestamp(void* c_this);
	[LinkName("QGraphicsSceneEvent_SetTimestamp")]
	public static extern void QGraphicsSceneEvent_SetTimestamp(void* c_this, uint64 ts);
	/// Delete this object from C++ memory
	[LinkName("QGraphicsSceneEvent_Delete")]
	public static extern void QGraphicsSceneEvent_Delete(void* self);
}
public class QGraphicsSceneMouseEvent
{
	protected void* nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QGraphicsSceneMouseEvent_new();
	}
	
	public ~this()
	{
		CQt.QGraphicsSceneMouseEvent_Delete(this.nativePtr);
	}
	
	public void Pos()
	{
		CQt.QGraphicsSceneMouseEvent_Pos(this.nativePtr);
	}
	
	public void SetPos(void* pos)
	{
		CQt.QGraphicsSceneMouseEvent_SetPos(this.nativePtr, pos);
	}
	
	public void ScenePos()
	{
		CQt.QGraphicsSceneMouseEvent_ScenePos(this.nativePtr);
	}
	
	public void SetScenePos(void* pos)
	{
		CQt.QGraphicsSceneMouseEvent_SetScenePos(this.nativePtr, pos);
	}
	
	public void ScreenPos()
	{
		CQt.QGraphicsSceneMouseEvent_ScreenPos(this.nativePtr);
	}
	
	public void SetScreenPos(void* pos)
	{
		CQt.QGraphicsSceneMouseEvent_SetScreenPos(this.nativePtr, pos);
	}
	
	public void ButtonDownPos(int64 button)
	{
		CQt.QGraphicsSceneMouseEvent_ButtonDownPos(this.nativePtr, button);
	}
	
	public void SetButtonDownPos(int64 button, void* pos)
	{
		CQt.QGraphicsSceneMouseEvent_SetButtonDownPos(this.nativePtr, button, pos);
	}
	
	public void ButtonDownScenePos(int64 button)
	{
		CQt.QGraphicsSceneMouseEvent_ButtonDownScenePos(this.nativePtr, button);
	}
	
	public void SetButtonDownScenePos(int64 button, void* pos)
	{
		CQt.QGraphicsSceneMouseEvent_SetButtonDownScenePos(this.nativePtr, button, pos);
	}
	
	public void ButtonDownScreenPos(int64 button)
	{
		CQt.QGraphicsSceneMouseEvent_ButtonDownScreenPos(this.nativePtr, button);
	}
	
	public void SetButtonDownScreenPos(int64 button, void* pos)
	{
		CQt.QGraphicsSceneMouseEvent_SetButtonDownScreenPos(this.nativePtr, button, pos);
	}
	
	public void LastPos()
	{
		CQt.QGraphicsSceneMouseEvent_LastPos(this.nativePtr);
	}
	
	public void SetLastPos(void* pos)
	{
		CQt.QGraphicsSceneMouseEvent_SetLastPos(this.nativePtr, pos);
	}
	
	public void LastScenePos()
	{
		CQt.QGraphicsSceneMouseEvent_LastScenePos(this.nativePtr);
	}
	
	public void SetLastScenePos(void* pos)
	{
		CQt.QGraphicsSceneMouseEvent_SetLastScenePos(this.nativePtr, pos);
	}
	
	public void LastScreenPos()
	{
		CQt.QGraphicsSceneMouseEvent_LastScreenPos(this.nativePtr);
	}
	
	public void SetLastScreenPos(void* pos)
	{
		CQt.QGraphicsSceneMouseEvent_SetLastScreenPos(this.nativePtr, pos);
	}
	
	public int64 Buttons()
	{
		return CQt.QGraphicsSceneMouseEvent_Buttons(this.nativePtr);
	}
	
	public void SetButtons(int64 buttons)
	{
		CQt.QGraphicsSceneMouseEvent_SetButtons(this.nativePtr, buttons);
	}
	
	public int64 Button()
	{
		return CQt.QGraphicsSceneMouseEvent_Button(this.nativePtr);
	}
	
	public void SetButton(int64 button)
	{
		CQt.QGraphicsSceneMouseEvent_SetButton(this.nativePtr, button);
	}
	
	public int64 Modifiers()
	{
		return CQt.QGraphicsSceneMouseEvent_Modifiers(this.nativePtr);
	}
	
	public void SetModifiers(int64 modifiers)
	{
		CQt.QGraphicsSceneMouseEvent_SetModifiers(this.nativePtr, modifiers);
	}
	
	public int64 Source()
	{
		return CQt.QGraphicsSceneMouseEvent_Source(this.nativePtr);
	}
	
	public void SetSource(int64 source)
	{
		CQt.QGraphicsSceneMouseEvent_SetSource(this.nativePtr, source);
	}
	
	public int64 Flags()
	{
		return CQt.QGraphicsSceneMouseEvent_Flags(this.nativePtr);
	}
	
	public void SetFlags(int64 flags)
	{
		CQt.QGraphicsSceneMouseEvent_SetFlags(this.nativePtr, flags);
	}
	
	public void* Widget()
	{
		return CQt.QGraphicsSceneEvent_Widget(this.nativePtr);
	}
	
	public void SetWidget(void* widget)
	{
		CQt.QGraphicsSceneEvent_SetWidget(this.nativePtr, widget);
	}
	
	public uint64 Timestamp()
	{
		return CQt.QGraphicsSceneEvent_Timestamp(this.nativePtr);
	}
	
	public void SetTimestamp(uint64 ts)
	{
		CQt.QGraphicsSceneEvent_SetTimestamp(this.nativePtr, ts);
	}
	
	public int64 Type()
	{
		return CQt.QEvent_Type(this.nativePtr);
	}
	
	public bool Spontaneous()
	{
		return CQt.QEvent_Spontaneous(this.nativePtr);
	}
	
	public virtual void SetAccepted(bool accepted)
	{
		CQt.QEvent_SetAccepted(this.nativePtr, accepted);
	}
	
	public bool IsAccepted()
	{
		return CQt.QEvent_IsAccepted(this.nativePtr);
	}
	
	public void Accept()
	{
		CQt.QEvent_Accept(this.nativePtr);
	}
	
	public void Ignore()
	{
		CQt.QEvent_Ignore(this.nativePtr);
	}
	
	public bool IsInputEvent()
	{
		return CQt.QEvent_IsInputEvent(this.nativePtr);
	}
	
	public bool IsPointerEvent()
	{
		return CQt.QEvent_IsPointerEvent(this.nativePtr);
	}
	
	public bool IsSinglePointEvent()
	{
		return CQt.QEvent_IsSinglePointEvent(this.nativePtr);
	}
	
	public static int32 RegisterEventType()
	{
		return CQt.QEvent_RegisterEventType();
	}
	
	public virtual void* Clone()
	{
		return CQt.QEvent_Clone(this.nativePtr);
	}
	
	public static int32 RegisterEventType1(int32 hint)
	{
		return CQt.QEvent_RegisterEventType1(hint);
	}
	
}
extension CQt
{
	[LinkName("QGraphicsSceneMouseEvent_new")]
	public static extern void* QGraphicsSceneMouseEvent_new();
	[LinkName("QGraphicsSceneMouseEvent_new2")]
	public static extern void* QGraphicsSceneMouseEvent_new2(int64 typeVal);
	[LinkName("QGraphicsSceneMouseEvent_Pos")]
	public static extern void QGraphicsSceneMouseEvent_Pos(void* c_this);
	[LinkName("QGraphicsSceneMouseEvent_SetPos")]
	public static extern void QGraphicsSceneMouseEvent_SetPos(void* c_this, void* pos);
	[LinkName("QGraphicsSceneMouseEvent_ScenePos")]
	public static extern void QGraphicsSceneMouseEvent_ScenePos(void* c_this);
	[LinkName("QGraphicsSceneMouseEvent_SetScenePos")]
	public static extern void QGraphicsSceneMouseEvent_SetScenePos(void* c_this, void* pos);
	[LinkName("QGraphicsSceneMouseEvent_ScreenPos")]
	public static extern void QGraphicsSceneMouseEvent_ScreenPos(void* c_this);
	[LinkName("QGraphicsSceneMouseEvent_SetScreenPos")]
	public static extern void QGraphicsSceneMouseEvent_SetScreenPos(void* c_this, void* pos);
	[LinkName("QGraphicsSceneMouseEvent_ButtonDownPos")]
	public static extern void QGraphicsSceneMouseEvent_ButtonDownPos(void* c_this, int64 button);
	[LinkName("QGraphicsSceneMouseEvent_SetButtonDownPos")]
	public static extern void QGraphicsSceneMouseEvent_SetButtonDownPos(void* c_this, int64 button, void* pos);
	[LinkName("QGraphicsSceneMouseEvent_ButtonDownScenePos")]
	public static extern void QGraphicsSceneMouseEvent_ButtonDownScenePos(void* c_this, int64 button);
	[LinkName("QGraphicsSceneMouseEvent_SetButtonDownScenePos")]
	public static extern void QGraphicsSceneMouseEvent_SetButtonDownScenePos(void* c_this, int64 button, void* pos);
	[LinkName("QGraphicsSceneMouseEvent_ButtonDownScreenPos")]
	public static extern void QGraphicsSceneMouseEvent_ButtonDownScreenPos(void* c_this, int64 button);
	[LinkName("QGraphicsSceneMouseEvent_SetButtonDownScreenPos")]
	public static extern void QGraphicsSceneMouseEvent_SetButtonDownScreenPos(void* c_this, int64 button, void* pos);
	[LinkName("QGraphicsSceneMouseEvent_LastPos")]
	public static extern void QGraphicsSceneMouseEvent_LastPos(void* c_this);
	[LinkName("QGraphicsSceneMouseEvent_SetLastPos")]
	public static extern void QGraphicsSceneMouseEvent_SetLastPos(void* c_this, void* pos);
	[LinkName("QGraphicsSceneMouseEvent_LastScenePos")]
	public static extern void QGraphicsSceneMouseEvent_LastScenePos(void* c_this);
	[LinkName("QGraphicsSceneMouseEvent_SetLastScenePos")]
	public static extern void QGraphicsSceneMouseEvent_SetLastScenePos(void* c_this, void* pos);
	[LinkName("QGraphicsSceneMouseEvent_LastScreenPos")]
	public static extern void QGraphicsSceneMouseEvent_LastScreenPos(void* c_this);
	[LinkName("QGraphicsSceneMouseEvent_SetLastScreenPos")]
	public static extern void QGraphicsSceneMouseEvent_SetLastScreenPos(void* c_this, void* pos);
	[LinkName("QGraphicsSceneMouseEvent_Buttons")]
	public static extern int64 QGraphicsSceneMouseEvent_Buttons(void* c_this);
	[LinkName("QGraphicsSceneMouseEvent_SetButtons")]
	public static extern void QGraphicsSceneMouseEvent_SetButtons(void* c_this, int64 buttons);
	[LinkName("QGraphicsSceneMouseEvent_Button")]
	public static extern int64 QGraphicsSceneMouseEvent_Button(void* c_this);
	[LinkName("QGraphicsSceneMouseEvent_SetButton")]
	public static extern void QGraphicsSceneMouseEvent_SetButton(void* c_this, int64 button);
	[LinkName("QGraphicsSceneMouseEvent_Modifiers")]
	public static extern int64 QGraphicsSceneMouseEvent_Modifiers(void* c_this);
	[LinkName("QGraphicsSceneMouseEvent_SetModifiers")]
	public static extern void QGraphicsSceneMouseEvent_SetModifiers(void* c_this, int64 modifiers);
	[LinkName("QGraphicsSceneMouseEvent_Source")]
	public static extern int64 QGraphicsSceneMouseEvent_Source(void* c_this);
	[LinkName("QGraphicsSceneMouseEvent_SetSource")]
	public static extern void QGraphicsSceneMouseEvent_SetSource(void* c_this, int64 source);
	[LinkName("QGraphicsSceneMouseEvent_Flags")]
	public static extern int64 QGraphicsSceneMouseEvent_Flags(void* c_this);
	[LinkName("QGraphicsSceneMouseEvent_SetFlags")]
	public static extern void QGraphicsSceneMouseEvent_SetFlags(void* c_this, int64 flags);
	/// Delete this object from C++ memory
	[LinkName("QGraphicsSceneMouseEvent_Delete")]
	public static extern void QGraphicsSceneMouseEvent_Delete(void* self);
}
public class QGraphicsSceneWheelEvent
{
	protected void* nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QGraphicsSceneWheelEvent_new();
	}
	
	public ~this()
	{
		CQt.QGraphicsSceneWheelEvent_Delete(this.nativePtr);
	}
	
	public void Pos()
	{
		CQt.QGraphicsSceneWheelEvent_Pos(this.nativePtr);
	}
